Few fixes and tweaks.  Also reverting to using a local copy of richtextfx that fixes an issue with selecting text.  Due to a bug in the date/time parsing the java.time package is now mostly used instead.