@@ -16,7 +16,7 @@ plugins {
     //id 'org.openjfx.javafxplugin' version '0.0.9'
 }
 
-version '3.0.0b2'
+version '3.0.0b6'
 //version '2.6.14'
 
 sourceSets {
@@ -134,7 +134,7 @@ dependencies {
 
      implementation fileTree('d:/reference/java/richtextfx/RichTextFX/richtextfx/build/libs/') {
         include 'richtextfx-1.0.0-SNAPSHOT.jar'
-        include 'flowless-0.6.jar'
+        include 'flowless-0.6.2.jar'
         include 'reactfx-2.0-M5.jar'
         include 'undofx-2.1.0.jar'
         include 'wellbehavedfx-0.3.3.jar'
@@ -200,6 +200,7 @@ javadoc {
 application {
     applicationDefaultJvmArgs =
     [
+        '-Djava.locale.providers=COMPAT',
         '--module-path',
         //'D:/reference/java/javafx/javafx-sdk-13.0.2/lib'
         'D:/reference/java/javafx/javafx-sdk-12/lib',
